package logic.model;

import logic.objects.User;

public class IUMImplementation implements IUserManager {

    @Override
<<<<<<< HEAD
    public User signIn() {
=======
    public void signIn() {
>>>>>>> 7ec58fc8afc9353c4db309a87dae1b6081e664ab
        // TODO Auto-generated method stub
        return null;
    }

    @Override
<<<<<<< HEAD
    public User signUp() {
        // TODO Auto-generated method stub
        return null;
=======
    public void signUp() {
        // TODO Auto-generated method stub   
>>>>>>> 7ec58fc8afc9353c4db309a87dae1b6081e664ab
    }
}