package logic.model;

import logic.objects.User;

public interface IUserManager {
    /**whatever. */    
<<<<<<< HEAD
    public User signIn();
    public User signUp();
=======
    public void signIn();
    public void signUp();
>>>>>>> 7ec58fc8afc9353c4db309a87dae1b6081e664ab
}
