package view.greet;

public class GreetController {
    
}