package view.register;

public class RegisterController {
    
}
